<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_reader">

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.coursearchmos.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_reader"
        android:name="com.example.coursearchmos.ui.reader.ReaderFragment"
        android:label="@string/title_reader"
        tools:layout="@layout/fragment_reader" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.coursearchmos.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.coursearchmos.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />
</navigation>